--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,10 @@
----
 repos:
-  - repo: https://github.com/python/black
-    rev: 22.3.0
-    hooks:
-      - id: black
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.0.275
+    rev: v0.9.4  # Ruff version
     hooks:
       - id: ruff
+      - if: ruff-format
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.393
+    hooks:
+      - id: pyright
