--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,9 @@ repos:
     rev: v0.9.4  # Ruff version
     hooks:
       - id: ruff
-      - if: ruff-format
-  - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.393
+      - id: ruff-format
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.0.275
     hooks:
-      - id: pyright
+      - id: ruff
