--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,7 @@ repos:
     hooks:
       - id: ruff
       - id: ruff-format
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.0.275
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.393
     hooks:
-      - id: ruff
+      - id: pyright
