--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -8,7 +8,6 @@ packages = ["mili_env"]
 [project]
 name = "mili_env"
 dynamic = ["version", "dependencies"]
-version = "0.0.1"
 authors = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 maintainers = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 description = "A Gymnasium RL Project"
@@ -18,11 +17,6 @@ keywords = ["gymnasium", "pygame", "autonomous", "reinforcement", "learning"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-]
-dependencies = [
-  "gymnasium",
-  "pygame>=2.1.3",
-  "pre-commit",
 ]
 
 [tool.hatch.metadata.hooks.requirements_txt]
@@ -38,19 +32,15 @@ venv = ".venv"
 
 [tool.ruff]
 line-length = 120
-
 fix = true
-
-lint.pydocstyle.convention = "google"
-
 format.docstring-code-format = true
 format.docstring-code-line-length = 120
 
-lint.select = ["ALL"]
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["COM812", "ISC001", "D100", "S311"]
 
-lint.ignore = ["COM812", "ISC001", "D100", "S311"]
-
-lint.per-file-ignores = { "**/examples/*" = [
+per-file-ignores = { "**/examples/*" = [
   "ANN",
   "D",
   "INP001",
@@ -65,11 +55,16 @@ lint.per-file-ignores = { "**/examples/*" = [
   "S",
   "TID252",
 ], "src/**/*.py" = [
-    "PLR2004", # Magic value used in comparison, ...
-    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
+    "PLR2004",
+    "S311",
 ]}
 
-lint.flake8-tidy-imports.ban-relative-imports = "all"
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
-lint.flake8-pytest-style.fixture-parentheses = false
-lint.flake8-pytest-style.mark-parentheses = false
+[tool.ruff.lint.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.lint.flake8-pytest-style]
+fixture-parentheses = false
+mark-parentheses = false
