Add ignore agent_log_*

--- a/.gitignore
+++ b/.gitignore
@@ -176,4 +176,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 # Training logs
-model/training_log_*
+model/episode_log_*
+model/agent_log_*
