Reward & Obs scaling + Parameter tuning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ format.docstring-code-line-length = 120
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["COM812", "ISC001", "D100", "S311"]
+ignore = ["COM812", "ISC001", "D100", "S311", "ERA001"]
 
 per-file-ignores = { "**/examples/*" = [
   "ANN",
