Add seaborn package

--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ swig==4.3.0
 sympy==1.13.1
 torch==2.6.0
 tqdm==4.67.1
+seaborn==0.12.2
 typing_extensions==4.12.2
 virtualenv==20.29.1
 wcwidth==0.2.13
