Ignore model/ and .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -176,5 +176,8 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 # Training logs
-model/episode_log_*
-model/agent_log_*
+model/*
+
+# Unknown files
+.DS_Store
+
