--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ swig==4.3.0
 sympy==1.13.1
 torch==2.6.0
 tqdm==4.67.1
-seaborn==0.12.2
+rich==13.5.2
 typing_extensions==4.12.2
 virtualenv==20.29.1
 wcwidth==0.2.13
@@ -59,3 +59,4 @@ wheel==0.45.1
 stable-baselines3==2.2.0
 tensorboard==2.20.0
 tensorboard-plugin-wit==1.8.1
+optuna==3.4.0
