--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,34 @@
-annotated-types==0.7.0
-box2d-py==2.3.5
-cfgv==3.4.0
-cloudpickle==3.1.1
-colorama==0.4.6
-contourpy==1.3.1
-copier==9.4.1
-cycler==0.12.1
-distlib==0.3.9
-dunamai==1.23.0
-Farama-Notifications==0.0.4
-filelock==3.17.0
-fonttools==4.55.8
-fsspec==2025.2.0
-funcy==2.0
+# Core RL dependencies
 gymnasium>=0.28.1,<0.30
-identify==2.6.6
-Jinja2==3.1.5
-jinja2-ansible-filters==1.3.2
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-pandas==2.2.1
-pyglet==2.1.8
-# Editable install with no version control (mili_env==0.0.1)
--e .
-mpmath==1.3.0
-networkx==3.4.2
-nodeenv==1.9.1
-noise==1.2.2
-numpy==1.26.4
-packaging==24.2
-pathspec==0.12.1
-pillow==11.1.0
-platformdirs==4.3.6
-plumbum==1.9.0
-pre_commit==4.1.0
-prompt_toolkit==3.0.50
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-questionary==2.1.0
-ruff==0.9.4
-scipy==1.15.1
-setuptools==75.8.0
-six==1.17.0
-swig==4.3.0
-sympy==1.13.1
-torch==2.6.0
-tqdm==4.67.1
-rich==13.5.2
-typing_extensions==4.12.2
-virtualenv==20.29.1
-wcwidth==0.2.13
-wheel==0.45.1
 stable-baselines3==2.2.0
-tensorboard==2.20.0
-tensorboard-plugin-wit==1.8.1
-optuna==3.4.0
+torch>=2.0.0
+numpy>=1.21.0
+
+# Hyperparameter optimization
+optuna>=3.4.0
+
+# Progress bar
+tqdm>=4.60.0
+rich>=13.5.2
+
+# Logging and monitoring
+tensorboard>=2.10.0
+
+# Environment dependencies
+box2d-py>=2.3.5
+pyglet>=2.1.0
+
+# Data handling
+pandas>=1.3.0
+
+# Scientific computing
+scipy==1.15.1
+
+# Visualization (optional but useful)
+matplotlib>=3.5.0
+
+# Miscellaneous utilities
+noise==1.2.2
+
+# The custom environment (editable install)
+-e .
