Remove pyglet.window

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = ["mili_env"]
 [project]
 name = "mili_env"
 dynamic = ["version", "dependencies"]
+requires-python = ">=3.13.1"
 authors = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 maintainers = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 description = "A Gymnasium RL Project"
@@ -17,6 +18,8 @@ keywords = ["gymnasium", "autonomous", "reinforcement", "learning"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.13",
 ]
 
 [tool.hatch.metadata.hooks.requirements_txt]
