Running MultiAgent PPO with Rlib

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Python version requirement: >=3.13.1
 # Core RL dependencies
-gymnasium>=0.28.1,<0.30
+gymnasium#>=0.28.1,<0.30
+ray[rllib]
+tabulate
 stable-baselines3==2.2.0
 torch>=2.0.0
 numpy>=1.21.0
@@ -30,6 +32,9 @@ matplotlib>=3.5.0
 
 # Miscellaneous utilities
 noise==1.2.2
+
+# Ruff linter (for code quality)
+ruff>=0.0.241
 
 # The custom environment (editable install)
 -e .
