--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = ["mili_env"]
 [project]
 name = "mili_env"
 dynamic = ["version", "dependencies"]
-requires-python = ">=3.13.1"
+requires-python = "<3.13.1"
 authors = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 maintainers = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
 description = "A Gymnasium RL Project"
