--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-# Python version requirement: >=3.13.1
+# Python version requirement: <3.13.1
 # Core RL dependencies
-gymnasium#>=0.28.1,<0.30
-ray[rllib]
+gymnasium
+ray[rllib]==2.49.2
 tabulate
-stable-baselines3==2.2.0
 torch>=2.0.0
 numpy>=1.21.0
 
@@ -35,6 +34,9 @@ noise==1.2.2
 
 # Ruff linter (for code quality)
 ruff>=0.0.241
+
+# Development and testing tools
+pytest>=7.0.0
 
 # The custom environment (editable install)
 -e .
